# rust-sundials

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
examples/: basic.rs  speed.c  speed.rs
src/: arkode.rs  cvode.rs  cvodes.rs  ida.rs  idas.rs  kinsol.rs  lib.rs  vector.rs
src/linear_solver/: mod.rs
src/matrix/: mod.rs
src/vector/: custom.rs  mod.rs  serial.rs
tests/: test_cvode.rs
