[package]
name = "sundials"
version = "0.0.1"
edition = "2021"
authors = ["Christophe Troestler <christophe.troestler@umons.ac.be>"]
description = "One dimensional root finding algorithms"
homepage = "https://github.com/Chris00/rust-sundials"
repository = "https://github.com/Chris00/rust-sundials"
documentation = "https://docs.rs/sundials"
license = "BSD-3-Clause"
keywords = ["ODE", "math", "numerics", "simulation", "science"]
categories = ["mathematics", "science"]

[dependencies]
sundials-sys = "0.3.0"
mpi = { version = "0.7.0", optional = true, default-features = false }

[dev-dependencies]
eyre = "0.6.8"
doc-comment = "0.3.3"
