[package]
name = "sundials"
version = "0.0.2"
edition = "2021"
authors = ["Christophe Troestler <christophe.troestler@umons.ac.be>"]
description = "Bindings to Sundials ordinary differential equations solvers"
homepage = "https://github.com/Chris00/rust-sundials"
repository = "https://github.com/Chris00/rust-sundials"
documentation = "https://docs.rs/sundials"
license = "BSD-3-Clause"
keywords = ["ODE", "math", "numerics", "simulation", "science"]
categories = ["mathematics", "science"]

[features]
default = ["arkode", "cvode", "ida", "kinsol"]
arkode = ["sundials-sys/arkode"]
cvode = ["sundials-sys/cvode"]
cvodes = ["sundials-sys/cvodes"]
ida = ["sundials-sys/ida"]
idas = ["sundials-sys/idas"]
kinsol = ["sundials-sys/kinsol"]
nvecopenmp = ["sundials-sys/nvecopenmp"]
nvecpthreads = ["sundials-sys/nvecpthreads"]
nightly = []

[dependencies]
sundials-sys = { version = "0.6", default-features = false }
mpi = { version = "0.7.0", optional = true, default-features = false }
libc = "0.2"
ndarray = { version = "0.15.6", optional = true }

[dev-dependencies]
eyre = "0.6.8"
doc-comment = "0.3.3"

[build-dependencies]
sundials-sys = { version = "0.6", default-features = false }

[package.metadata.docs.rs]

features = ["arkode", "cvode", "cvodes", "ida", "idas", "kinsol", "nvecopenmp", "nvecpthreads"]

# For flamegraphs
# [profile.release]
# debug = true

# [target.x86_64-unknown-linux-gnu]
# linker = "/usr/bin/clang"
# rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
