[package]
name = "sundials"
version = "0.0.3"
edition = "2024"
authors = ["Christophe Troestler <christophe.troestler@umons.ac.be>"]
description = "Bindings to Sundials ordinary differential equations solvers"
homepage = "https://github.com/Chris00/rust-sundials"
repository = "https://github.com/Chris00/rust-sundials"
documentation = "https://docs.rs/sundials"
license = "BSD-3-Clause"
keywords = ["ODE", "math", "numerics", "simulation", "science"]
categories = ["mathematics", "science"]
rust-version = "1.85"

[features]
default = ["arkode", "cvode", "ida", "kinsol"]
arkode = ["sundials-sys/arkode"]
cvode = ["sundials-sys/cvode"]
cvodes = ["sundials-sys/cvodes"]
ida = ["sundials-sys/ida"]
idas = ["sundials-sys/idas"]
kinsol = ["sundials-sys/kinsol"]
nvecopenmp = ["sundials-sys/nvecopenmp"]
nvecpthreads = ["sundials-sys/nvecpthreads"]
nightly = []

[dependencies]
sundials-sys = { version = "0.6.2", default-features = false }
mpi = { version = "0.8.0", optional = true, default-features = false }
libc = "0.2.172"
ndarray = { version = "0.16.1", optional = true }

[dev-dependencies]
eyre = "0.6.12"
doc-comment = "0.3.3"

[build-dependencies]
sundials-sys = { version = "0.6.2", default-features = false }

[package.metadata.docs.rs]

features = ["arkode", "cvode", "cvodes", "ida", "idas", "kinsol", "nvecopenmp", "nvecpthreads"]

# For flamegraphs
# [profile.release]
# debug = true

# [target.x86_64-unknown-linux-gnu]
# linker = "/usr/bin/clang"
# rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
